--- a/popup.html
+++ b/popup.html
@@ -39,6 +39,7 @@
         </div>
     </div>
     <script src="/static/js/jquery-3.6.3.min.js"></script>
+    <script src="/static/js/bilibili-evolved.user.js"></script>
     <script src="/static/js/popup.js"></script>
     <script src="/static/js/server.js"></script>
     <script src="/static/js/strength.js"></script>
