dist 里的 js 运行报错，我尝试替换为自己油猴脚本里的 js

--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <script src="/static/js/jquery-3.6.3.min.js"></script>
-    <script src="/static/js/bilibili-evolved.user.js"></script>
+    <script src="/static/js/Bilibili Evolved.user.js"></script>
     <script src="/static/js/popup.js"></script>
     <script src="/static/js/server.js"></script>
     <script src="/static/js/strength.js"></script>
