--- a/popup.html
+++ b/popup.html
@@ -38,11 +38,10 @@
             <div class="box"></div>
         </div>
     </div>
-    <script src="/static/js/jquery-3.6.3.min.js"></script>
-    <script src="/static/js/lodash.min.js"></script>
+    <script src="/static/package/jquery-3.6.3.min.js"></script>
+    <script src="/static/package/lodash.min.js"></script>
     <script src="/static/js/popup.js"></script>
     <script src="/static/js/server.js"></script>
-    <script src="/static/js/strength.js"></script>
 </body>
 
 </html>
